--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,50 @@
 cmake_minimum_required(VERSION 3.18)
 
+
+#-- Cmake Options -------------------------------------------------------------------------
+
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+if( WIN32 )
+    set( CMAKE_INSTALL_PREFIX "C:/dev" CACHE STRING "Target directory for installation." )
+endif() #if(WIN32)
+
 # TODO: check if _build-xxxx directory used.
 
-option( USE_SYSTEM_OPENAL "Don't use OpenAL included in this project, already installed from repository" ON )
+option( USE_SYSTEM_OPENAL "Don't use OpenAL included in this project, already installed from repository." ON )
 if( NOT USE_SYSTEM_OPENAL )
     message( FATAL_ERROR "OpenAL not included yet, the developer was lazy!" )
 endif()
 
+# set(SYSTEM_INCLUDE_PATH "What" CACHE STRING "System include path" )
+if( WIN32 )
+    set( WIN32_SYSTEM_INCLUDE_PATH "C:/dev/include" CACHE STRING "System default include path.")
+    set( WIN32_SYSTEM_LIBRARY_PATH "C:/dev/lib" CACHE STRING "System default library path." )
+endif()
+
+
+#-- Project and targets -----------------------------------------------------------------
+
+
 project(despair-au VERSION 1.0)
 
+if( WIN32 )
+    include_directories( ${WIN32_SYSTEM_INCLUDE_PATH} )
+    link_directories( ${WIN32_SYSTEM_LIBRARY_PATH} )
+endif()
+
+
+# target/despari-au
 add_library( despair-au src/despair-au.cpp )
 
-target_include_directories( despair-au PUBLIC
-    "${PROJECT_SOURCE_DIR}/include"
+target_include_directories( despair-au
+    PUBLIC "${PROJECT_SOURCE_DIR}/include"
     )
 
+
+# targets/example-program
 add_executable( example examples/example.cpp )
 
 target_include_directories(example PUBLIC
@@ -26,7 +53,7 @@ target_include_directories(example PUBLIC
 
 target_link_libraries( example
     PUBLIC despair-au
-    PRIVATE vorbisfile
-    PRIVATE vorbis
-    PRIVATE ogg
+    PUBLIC vorbisfile
+    PUBLIC vorbis
+    PUBLIC ogg
     )
