Explicit CmakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,25 +3,36 @@ cmake_minimum_required(VERSION 3.18)
 
 #-- Preprocess ----------------------------------------------------------------------------
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+set( CMAKE_CXX_STANDARD             11              )
+set( CMAKE_CXX_STANDARD_REQUIRED    True            )
+set( CMAKE_FIND_LIBRARY_PREFIXES    "lib"           )
+set( CMAKE_FIND_LIBRARY_SUFFIXES    ".a;.dll.a;.so" )
+
+set ( DEFAULT_CMAKE_INSTALL_PREFIX_PENGU "/usr/local" )
+set ( DEFAULT_CMAKE_INSTALL_PREFIX_WIN32 "C:/dev" )
+
+set( DEFAULT_VORBIS_INC_PATH "" )
+set( DEFAULT_OGG_INC_PATH "" )
+set( DEFAULT_OGG_LIB_PATH "" )
+set( DEFAULT_VORBIS_LIB_PATH "" )
+set( DEFAULT_OPENAL_INC_PATH "" )
+set( DEFAULT_OPENAL_LIB_PATH "" )
 
 if( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
     message( FATAL_ERROR "Binary directory should not be the same as source directory, please specify a different one!" )
 endif()
 
 set( OPENAL_LIB_NAME "openal" )
-set( CMAKE_FIND_LIBRARY_PREFIXES    "lib" )
-set( CMAKE_FIND_LIBRARY_SUFFIXES    ".a;.dll.a;.so" )
 
 
 if( WIN32 )
-    set( OPENAL_LIB_NAME                "OpenAL32" )
-    find_package( ogg REQUIRED )
-    find_package( vorbis REQUIRED )
-    find_package( ${OPENAL_LIB_NAME} REQUIRED )
+    set( OPENAL_LIB_NAME "OpenAL32" )
+
+    find_package( ogg REQUIRED                  )
+    find_package( vorbis REQUIRED               )
+    find_package( ${OPENAL_LIB_NAME} REQUIRED   )
 else()
-    find_library( FIND_OGG "ogg" NAMES "ogg" "Ogg" )
+    find_library( FIND_OGG "ogg" NAMES "ogg" "Ogg" "oggstatic")
     find_library( FIND_VORBIS "vorbis" NAMES "vorbis" "Vorbis" )
     find_library( FIND_OPENAL "openal" NAMES "openal" "OpenAL" )
 endif() #WIN32
@@ -30,9 +41,14 @@ endif() #WIN32
 #-- CMake Options -------------------------------------------------------------------------
 
 
-if( WIN32 )
-    set( CMAKE_INSTALL_PREFIX "C:/dev" CACHE STRING "Target directory for installation." )
-endif() #if(WIN32)
+set( CMAKE_INSTALL_PREFIX ${DEFAULT_CMAKE_INSTALL_PREFIX_PENGU} CACHE STRING "Target directory for installation." )
+set ( DEPENDENCY_VORBIS_INC_PATH ${DEFAULT_VORBIS_INC_PATH} CACHE STRING "libvorbis include path" )
+set ( DEPENDENCY_VORBIS_LIB_PATH ${DEFAULT_VORBIS_INC_PATH} CACHE STRING "libvorbis library path" )
+set ( DEPENDENCY_OGG_INC_PATH ${DEFAULT_OGG_INC_PATH} CACHE STRING "libvorbis include path" )
+set ( DEPENDENCY_OGG_LIB_PATH ${DEFAULT_OGG_INC_PATH} CACHE STRING "libvorbis library path" )
+set ( DEPENDENCY_OPENAL_INC_PATH ${DEFAULT_OPENAL_INC_PATH} CACHE STRING "libvorbis include path" )
+set ( DEPENDENCY_OPENAL_LIB_PATH ${DEFAULT_OPENAL_INC_PATH} CACHE STRING "libvorbis library path" )
+
 
 # TODO: check if _build-xxxx directory used.
 
@@ -93,3 +109,5 @@ add_custom_target( neverbuild SOURCES
     include/despair-au.hpp
     README.md
     )
+
+message( STATUS "Install location: ${CMAKE_INSTALL_PREFIX}" )
