--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,59 +8,43 @@ set( CMAKE_CXX_STANDARD_REQUIRED    True            )
 set( CMAKE_FIND_LIBRARY_PREFIXES    "lib"           )
 set( CMAKE_FIND_LIBRARY_SUFFIXES    ".a;.dll.a;.so" )
 
-set ( DEFAULT_CMAKE_INSTALL_PREFIX_PENGU "/usr/local" )
-set ( DEFAULT_CMAKE_INSTALL_PREFIX_WIN32 "C:/dev" )
+set ( DEFAULT_CMAKE_INSTALL_PREFIX_PENGU "/usr/local"   )
+set ( DEFAULT_CMAKE_INSTALL_PREFIX_WIN32 "C:/dev"       )
 
-set( DEFAULT_VORBIS_INC_PATH "" )
-set( DEFAULT_OGG_INC_PATH "" )
-set( DEFAULT_OGG_LIB_PATH "" )
-set( DEFAULT_VORBIS_LIB_PATH "" )
-set( DEFAULT_OPENAL_INC_PATH "" )
-set( DEFAULT_OPENAL_LIB_PATH "" )
+set( DEFAULT_VORBIS_INC_PATH    "" )
+set( DEFAULT_OGG_INC_PATH       "" )
+set( DEFAULT_OGG_LIB_PATH       "" )
+set( DEFAULT_VORBIS_LIB_PATH    "" )
+set( DEFAULT_OPENAL_INC_PATH    "" )
+set( DEFAULT_OPENAL_LIB_PATH    "" )
 
 if( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
     message( FATAL_ERROR "Binary directory should not be the same as source directory, please specify a different one!" )
 endif()
 
 set( OPENAL_LIB_NAME "openal" )
-
-
 if( WIN32 )
     set( OPENAL_LIB_NAME "OpenAL32" )
-
-    find_package( ogg REQUIRED                  )
-    find_package( vorbis REQUIRED               )
-    find_package( ${OPENAL_LIB_NAME} REQUIRED   )
-else()
-    find_library( FIND_OGG "ogg" NAMES "ogg" "Ogg" "oggstatic")
-    find_library( FIND_VORBIS "vorbis" NAMES "vorbis" "Vorbis" )
-    find_library( FIND_OPENAL "openal" NAMES "openal" "OpenAL" )
 endif() #WIN32
+
+find_library( FIND_OGG_RESULT       "ogg"       NAMES "ogg" "Ogg" "oggstatic"       )
+find_library( FIND_VORBIS_RESULT    "vorbis"    NAMES "vorbis" "Vorbis"             )
+find_library( FIND_OPENAL_RESULT    "openal"    NAMES "openal" "OpenAL" "OpenAL32"  )
 
 
 #-- CMake Options -------------------------------------------------------------------------
 
 
-set( CMAKE_INSTALL_PREFIX ${DEFAULT_CMAKE_INSTALL_PREFIX_PENGU} CACHE STRING "Target directory for installation." )
 set ( DEPENDENCY_VORBIS_INC_PATH ${DEFAULT_VORBIS_INC_PATH} CACHE STRING "libvorbis include path" )
 set ( DEPENDENCY_VORBIS_LIB_PATH ${DEFAULT_VORBIS_INC_PATH} CACHE STRING "libvorbis library path" )
-set ( DEPENDENCY_OGG_INC_PATH ${DEFAULT_OGG_INC_PATH} CACHE STRING "libvorbis include path" )
-set ( DEPENDENCY_OGG_LIB_PATH ${DEFAULT_OGG_INC_PATH} CACHE STRING "libvorbis library path" )
-set ( DEPENDENCY_OPENAL_INC_PATH ${DEFAULT_OPENAL_INC_PATH} CACHE STRING "libvorbis include path" )
-set ( DEPENDENCY_OPENAL_LIB_PATH ${DEFAULT_OPENAL_INC_PATH} CACHE STRING "libvorbis library path" )
-
-
-# TODO: check if _build-xxxx directory used.
-
-option( USE_SYSTEM_OPENAL "Don't use OpenAL included in this project, already installed from repository." ON )
-if( NOT USE_SYSTEM_OPENAL )
-    message( FATAL_ERROR "OpenAL not included yet, the developer was lazy!" )
-endif()
+set ( DEPENDENCY_OGG_INC_PATH ${DEFAULT_OGG_INC_PATH} CACHE STRING "libogg include path" )
+set ( DEPENDENCY_OGG_LIB_PATH ${DEFAULT_OGG_INC_PATH} CACHE STRING "libogg library path" )
+set ( DEPENDENCY_OPENAL_INC_PATH ${DEFAULT_OPENAL_INC_PATH} CACHE STRING "OpenAL include path" )
+set ( DEPENDENCY_OPENAL_LIB_PATH ${DEFAULT_OPENAL_INC_PATH} CACHE STRING "OpenAL library path" )
 
 # set(SYSTEM_INCLUDE_PATH "What" CACHE STRING "System include path" )
 if( WIN32 )
-    set( WIN32_SYSTEM_INCLUDE_PATH "C:/dev/include" CACHE STRING "System default include path." )
-    set( WIN32_SYSTEM_LIBRARY_PATH "C:/dev/lib"     CACHE STRING "System default library path." )
+    set( WIN32_CENTRALIZED_PACKAGES_PATH "C:/dev" CACHE STRING "If you follow linux library structure, you can specify include/lib path for all of them here." )
 endif()
 
 
@@ -69,10 +53,22 @@ endif()
 
 project(despair-au VERSION 1.0)
 
-if( WIN32 )
-    include_directories( ${WIN32_SYSTEM_INCLUDE_PATH} )
-    link_directories( ${WIN32_SYSTEM_LIBRARY_PATH} )
-endif()
+set( GLOBAL_INCLUDE_PATH
+    ${DEPENDENCY_VORBIS_INC_PATH}
+    ${DEPENDENCY_OGG_INC_PATH}
+    ${DEPENDENCY_OPENAL_INC_PATH}
+    "${WIN32_CENTRALIZED_PACKAGES_PATH}/include"
+    )
+set( GLOBAL_LIBRARY_PATH
+    ${DEPENDENCY_VORBIS_LIB_PATH}
+    ${DEPENDENCY_OGG_LIB_PATH}
+    ${DEPENDENCY_OPENAL_LIB_PATH}
+    "${WIN32_CENTRALIZED_PACKAGES_PATH}/lib"
+    )
+
+include_directories( ${GLOBAL_INCLUDE_PATH} )
+link_directories( ${GLOBAL_LIBRARY_PATH} )
+
 
 
 # target/despari-au
@@ -110,4 +106,20 @@ add_custom_target( neverbuild SOURCES
     README.md
     )
 
+
+#-- Install section ---------------------------------------------------------------------
+
+
+# empty
+
+
+#-- Print configure result --------------------------------------------------------------
+
+
 message( STATUS "Install location: ${CMAKE_INSTALL_PREFIX}" )
+message( STATUS "inc-path: ${GLOBAL_INCLUDE_PATH}" )
+message( STATUS "lib-path: ${GLOBAL_LIBRARY_PATH}" )
+if( WIN32 )
+    message( STATUS "win32/inc-path: ${WIN32_CENTRALIZED_INCLUDE_PATH}" )
+    message( STATUS "win32/lib-path: ${WIN32_CENTRALIZED_LIBRARY_PATH}" )
+endif() #WIN32
